# binpicking_utils

./: .travis.yml  LICENSE  README.md
bin_pose_emulator/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
bin_pose_emulator/config/: bin_pose_emulator.yaml  bin_pose_emulator_abb_120.yaml  bin_pose_emulator_abb_4600.yaml  bin_pose_emulator_alza.yaml  bin_pose_emulator_benteler_lt16.yaml  bin_pose_emulator_fanuc.yaml  bin_pose_emulator_fanuc_reorientation.yaml  bin_pose_emulator_from_cube.yaml  bin_pose_emulator_from_pointcloud.yaml  bin_pose_emulator_single_pose.yaml  bin_pose_emulator_staubli_bunka.yaml  example_config.yaml
bin_pose_emulator/include/bin_pose_emulator/: ActionServerInterface.h  BinPoseEmulator.h  BinPoseEmulatorException.h  Utils.h  bin_pose_emulator.h  utils.h
bin_pose_emulator/include/bin_pose_emulator/pose_generator/: PoseGeneratorBase.h  PoseGeneratorFromCube.h  PoseGeneratorFromCubeRandom.h  PoseGeneratorFromPointCloud.h  PoseGeneratorFromPointCloudRandom.h  SinglePoseGenerator.h
bin_pose_emulator/launch/: bin_pose_emulator.launch
bin_pose_emulator/src/: ActionServerInterface.cpp  BinPoseEmulator.cpp  BinPoseEmulatorNode.cpp  bin_pose_emulator.cpp  bin_pose_emulator_node.cpp  main.cpp  visualizer.cpp
bin_pose_emulator/src/pose_generator/: PoseGeneratorBase.cpp  PoseGeneratorFromCube.cpp  PoseGeneratorFromCubeRandom.cpp  PoseGeneratorFromPointCloud.cpp  PoseGeneratorFromPointCloudRandom.cpp  SinglePoseGenerator.cpp
bin_pose_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
bin_pose_msgs/msg/: bin_pose_ms.msg
bin_pose_msgs/srv/: bin_pose.srv  bin_pose_vector.srv  change_data.srv  envelope_visualize.srv  joint_limits.srv
binpicking_emulator/: CMakeLists.txt  package.xml
binpicking_emulator/config/: virtual_robot_config.yaml
binpicking_emulator/include/binpicking_emulator/: MoveGroupOwn.h  binpicking_emulator.h  kinematic.h  path_length_test.h  trajectoryEvaluator.h
binpicking_emulator/launch/: binpicking_emulator.launch  binpicking_emulator_test.launch  simulacia_alza.launch  stomp_test.launch  stomp_test_benteler_lt16.launch  stomp_test_fanuc.launch  stomp_test_fanuc_reorient.launch  stomp_test_irb120.launch  stomp_test_staubli_bunka.launch  test_1_3.launch  visualize_fails.launch
binpicking_emulator/src/: MoveGroupOwn.cpp  binpicking_emulator.cpp  binpicking_emulator_node.cpp  kinematic.cpp  path_length_test.cpp  trajectoryEvaluator.cpp
binpicking_simple_utils/: CHANGELOG.rst  CMakeLists.txt  package.xml
binpicking_simple_utils/collision_objects/config/: list_of_collision_objects.yaml  yumi_workplace.yaml
binpicking_simple_utils/collision_objects/meshes/: bin.stl
binpicking_simple_utils/include/binpicking_simple_utils/: collision_object_publisher.h  joint_limit_estimator.h  tool_pose_tf_broadcaster.h  working_envelope_visualizer.h
binpicking_simple_utils/launch/: collision_object_publisher.launch  joint_limit_publisher.launch  tool_pose_tf_broadcaster.launch  working_envelope_viusalizer.launch
binpicking_simple_utils/src/: collision_object_publisher.cpp  joint_limit_estimator.cpp  tool_pose_tf_broadcaster.cpp  working_envelope_visualizer.cpp
binpicking_utils/: CHANGELOG.rst  CMakeLists.txt  package.xml
localization_interface/: CMakeLists.txt  package.xml
localization_interface/include/localization_interface/: localization_interface.h
localization_interface/launch/: bringup.launch
localization_interface/src/: localization_interface.cpp
localization_interface/srv/: get_position.srv
pho_centroid/: .gitignore  CMakeLists.txt  main.cpp
stomp_param_changer/: CMakeLists.txt  package.xml
stomp_param_changer/msg/: statistics.msg
stomp_param_changer/src/: param_changer.cpp
urdf_std_format_converter/: CMakeLists.txt  package.xml
urdf_std_format_converter/include/urdf_std_format_converter/: urdf_std_format_converter.h
urdf_std_format_converter/src/: converter.cpp  urdf_converter_node.cpp  urdf_std_format_converter.cpp
urdf_std_format_converter/urdf/: robot.xacro  robot_macro.xacro
