<?xml version="1.0"?>
<package>
  <name>bin_pose_msgs</name>
  <version>0.1.2</version>
  <description>The bin_pose_msgs package</description>

  <maintainer email="durovsky@photoneo.com">durovsky</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>genmsg</build_depend>

  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>genmsg</run_depend>

</package>
