<?xml version="1.0"?>
<package>
  <name>binpicking_emulator</name>
  <version>0.1.4</version>
  <description>
    <p>
      binpicking_emulator generates binpicking operations according to Photoneo binpicking protocol.
    </p>
  </description>

  <author>Frantisek Durovsky </author>
  <maintainer email="durovsky@photoneo.com">Frantisek Durovsky</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>bin_pose_msgs</build_depend>
  <build_depend>photoneo_msg</build_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>bin_pose_msgs</run_depend>
  <run_depend>photoneo_msg</run_depend>
  <run_depend>moveit_core</run_depend>
  <run_depend>moveit_ros_planning_interface</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>tf</run_depend>

</package>
