<?xml version="1.0"?>
<package>
  <name>binpicking_simple_utils</name>
  <version>0.1.4</version>
  <description>
    <p>
      Various binpicking utils
    </p>
  </description>

  <author>Frantisek Durovsky </author>
  <maintainer email="durovsky@photoneo.com">Frantisek Durovsky</maintainer>
  <license>APACHE</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>moveit_msgs</build_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>geometric_shapes</build_depend>
  <build_depend>bin_pose_msgs</build_depend>
  <build_depend>joint_limits_interface</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>yaml-cpp</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>moveit_msgs</run_depend>
  <run_depend>moveit_core</run_depend>
  <run_depend>moveit_ros_planning_interface</run_depend>
  <run_depend>geometric_shapes</run_depend>
  <run_depend>bin_pose_msgs</run_depend>
  <run_depend>joint_limits_interface</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>yaml-cpp</run_depend>
  <run_depend>libpcl-all</run_depend>

</package>

