<?xml version="1.0"?>
<package>
  <name>localization_interface</name>
  <version>0.1.0</version>
  <description>The Localization Interface Package</description>

  <maintainer email="durovsky@photoneo.com">Frantisek Durovsky</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>tf</run_depend>

</package>
